objects/POA__c.object
<CustomObject>
    <fields>
        <fullName>Launch_Issues__c</fullName>
        <inlineHelpText>If the answer to the question &quot;Did we launch on time&quot; equals No, then please provide details as to the issues</inlineHelpText>
        <label>Launch Issues</label>
        <picklist>
            <picklistValues>
                <fullName>Account Structure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ad Copy Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keyword Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extension Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion Tracking Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile Settings Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign Settings Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software Issues</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <label>Legacy_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_of_Products_Saved__c</fullName>
        <inlineHelpText>If you check the box &quot;Products Saved&quot;, you need to list the products in this field</inlineHelpText>
        <label>List of Products Saved</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MARKET_PRICING_TOOL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MARKET PRICING TOOL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MPT_BOOKS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MPT - BOOKS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MapCity__c</fullName>
        <formula>Dealer__r.ShippingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MapCity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MapState__c</fullName>
        <formula>Dealer__r.ShippingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MapState</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MapStreet__c</fullName>
        <formula>Dealer__r.ShippingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MapStreet</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MapZipcode__c</fullName>
        <formula>Dealer__r.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MapZipcode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_Advertising_Consultant__c</fullName>
        <description>Haystak formula Field for AC on account</description>
        <formula>Dealer__r.Media_Advertising_Consultant__c</formula>
        <label>Media Advertising Consultant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_District_Sales_Mgr__c</fullName>
        <description>Haystak tracking for DSM</description>
        <formula>Dealer__r.Media_District_Sales_Mgr__c</formula>
        <label>Media District Sales Mgr</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_Product_Specialist__c</fullName>
        <description>Haystak tracking of ATC Media Product Specialist</description>
        <formula>Dealer__r.Media_Product_Specialist__c</formula>
        <label>Media Product Specialist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Bids__c</fullName>
        <label>Monthly Bids</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Buy_List__c</fullName>
        <label>Monthly Buy List</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Buys__c</fullName>
        <label>Monthly Buys</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_COOP_Notes__c</fullName>
        <description>used by Haystak to keep track on monthly notes related to COOP Payments</description>
        <inlineHelpText>BE SURE TO INCLUDE DATE ON EACH ENTRY</inlineHelpText>
        <label>Monthly COOP Notes</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Monthly_Extension__c</fullName>
        <label>Monthly Extension</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Saved_Searches__c</fullName>
        <label>Monthly Saved Searches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Views_GS__c</fullName>
        <label>Monthly Views GS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Views_Mobile__c</fullName>
        <label>Monthly Views Mobile</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Views_SW__c</fullName>
        <label>Monthly Views SW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Needs_CO_OP_By__c</fullName>
        <description>Used by Haystak to know due date to process CO-OP</description>
        <label>Needs CO-OP By</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>New_Dealer_Launch_Workshop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Dealer Launch Workshop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Inventory_Count__c</fullName>
        <label>New Inventory Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Vehicle_Price_Changes__c</fullName>
        <description># New vehicle price changes for dealers without Conquest</description>
        <formula>Dealer__r.New_vehicle_price_changes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText># New vehicle price changes for dealers without Conquest</inlineHelpText>
        <label># New Vehicle Price Changes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_MS_Follow_up_Date__c</fullName>
        <label>Next MS Follow-up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Scheduled_Follow_up_Date__c</fullName>
        <label>Next Scheduled Follow-up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Visit_Date__c</fullName>
        <description>The date of the next anticipated onsite visit</description>
        <inlineHelpText>The date of the next anticipated onsite visit</inlineHelpText>
        <label>Next Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OEM_Dealer_Code__c</fullName>
        <description>OEM Dealer Code for Haystak POA&apos;s</description>
        <formula>Dealer__r.OEM_Dealer_Code__c</formula>
        <label>OEM Dealer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OEM_Regions__c</fullName>
        <description>Reads OEM regions Field on Account and brings values forward to POA for Haystak.</description>
        <formula>IF ( INCLUDES ( Dealer__r.Group__c  , &quot;CA&quot; ), &quot;CA; &quot;,null ) &amp;
IF ( INCLUDES ( Dealer__r.Group__c  , &quot;Den&quot; ), &quot;Den; &quot;,null ) &amp;
IF ( INCLUDES ( Dealer__r.Group__c  , &quot;GL&quot; ), &quot;GL; &quot;,null ) &amp;
IF ( INCLUDES ( Dealer__r.Group__c  , &quot;GST&quot; ), &quot;GST; &quot;,null ) &amp;
IF ( INCLUDES ( Dealer__r.Group__c  , &quot;MA&quot; ), &quot;MA; &quot;,null ) &amp;
IF ( INCLUDES ( Dealer__r.Group__c  , &quot;MW&quot; ), &quot;MW; &quot;,null ) &amp;
IF ( INCLUDES ( Dealer__r.Group__c  , &quot;NE&quot; ), &quot;NE; &quot;,null ) &amp;
IF ( INCLUDES ( Dealer__r.Group__c  , &quot;SE&quot; ), &quot;SE; &quot;,null ) &amp;
IF ( INCLUDES ( Dealer__r.Group__c  , &quot;SET&quot; ), &quot;SET; &quot;,null ) &amp;
IF ( INCLUDES ( Dealer__r.Group__c  , &quot;SW&quot; ), &quot;SW; &quot;,null ) &amp;
IF ( INCLUDES ( Dealer__r.Group__c  , &quot;West&quot; ), &quot;West; &quot;,null )</formula>
        <label>OEM Regions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OTHER_Cancelled_Products__c</fullName>
        <description>Cancelled Products that aren&apos;t available in POA to Mark</description>
        <label>OTHER (Cancelled Products)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Old_PPC__c</fullName>
        <description>Pending Price Changes greater than 7 days</description>
        <formula>Dealer__r.Old_PPC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pending Price Changes greater than 7 days</inlineHelpText>
        <label># Old PPC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_Email__c</fullName>
        <formula>Owner:User.Email</formula>
        <label>Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Id__c</fullName>
        <formula>OwnerId</formula>
        <inlineHelpText>hidden field for reporting</inlineHelpText>
        <label>Owner Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Role__c</fullName>
        <formula>Owner:User.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PBX_INTEGRATION__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PBX INTEGRATION</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>POA_Owner_Name__c</fullName>
        <formula>Owner:User.User_Full_Name__c 

/*CR-00014105*/</formula>
        <inlineHelpText>formula field that displays the owner name for use in process builder and flows</inlineHelpText>
        <label>POA Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POA_Resolution_Survey_Status__c</fullName>
        <label>POA Resolution Survey Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>POA_Status__c</fullName>
        <inlineHelpText>read only field that shows whether the POA is open or closed based on the Status field</inlineHelpText>
        <label>POA Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <color>#33CC00</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>POA_Subtype__c</fullName>
        <inlineHelpText>Linked to the Record Type field. Only usable on certain Record Type values.</inlineHelpText>
        <label>Subtype</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>No Subtype</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Partial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heat</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>POA_Summary__c</fullName>
        <inlineHelpText>internal place to keep notes</inlineHelpText>
        <label>General Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>POA_Type__c</fullName>
        <formula>CASE(RecordTypeId, 
   &quot;01270000000Q8PX&quot;, &quot;New Account F/U&quot;, 
   &quot;01270000000Q8Fw&quot;, &quot;Support&quot;,
   &quot;01270000000Q8G1&quot;, &quot;Cancellation&quot;,
   &quot;01270000000Q8G6&quot;, &quot;AutoTrader&quot;,
   &quot;01270000000Q8QL&quot;, &quot;CRM Followup&quot;,
   &quot;01270000000Q8QG&quot;, &quot;Implementation&quot;,
   &quot;01270000000Q8SH&quot;, &quot;VinSocial&quot;,
   &quot;01270000000Q9Pi&quot;,&quot;New Website Followup&quot;,
   &quot;01270000000Q9a7&quot;,&quot;New Website Followup&quot;,
   &quot;01270000000QARz&quot;,&quot;Account Mgmt POA&quot;,
   &quot;01270000000QB6U&quot;,&quot;Haystak SEM&quot;,
   &quot;01270000000QB5g&quot;,&quot;Haystak SEO&quot;,
   &quot;012Q000000095t4&quot;, &quot;vAuto Provision&quot;,
   &quot;NOT DEFINED, EDIT FIELD&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>looks up the record type id and converts it to text</inlineHelpText>
        <label>POA Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POA_Value__c</fullName>
        <formula>IF( ISPICKVAL( Status__c , &quot;Pending Cancellation&quot;), 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Haystak field - if the status equals pending cancellation assign a value of 0, otherwise value = 1</inlineHelpText>
        <label>POA Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PPP_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PPP Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_POA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Master POA for sub POAs. used for Dealer Groups and Ad Agencies</description>
        <label>Parent POA</label>
        <referenceTo>POA__c</referenceTo>
        <relationshipLabel>Dependent POAs</relationshipLabel>
        <relationshipName>POAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pieces_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in Cancellation POAs to denote that the Create Cancellation Pieces button has been clicked.</description>
        <label>Pieces Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_Training_Call_Date__c</fullName>
        <label>Pre-Training Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Preferred_Frequency_of_Contact__c</fullName>
        <label>Preferred Frequency of Contact</label>
        <picklist>
            <picklistValues>
                <fullName>As Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Dealer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Dealer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>POA&apos;s</relationshipLabel>
        <relationshipName>POA_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prior_Account_Director_Email__c</fullName>
        <description>When the Account Director is changed, the previous Account Director&apos;s email address is logged here. Used for workflow email notifications.</description>
        <label>Prior Account Director Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Prior_Haystak_Acct_Manager__c</fullName>
        <description>Used by Haystak to track Account manager history</description>
        <inlineHelpText>Who was the previous Haystak Acct Manager on this POA?</inlineHelpText>
        <label>Prior Haystak Acct Manager</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Owner_Email__c</fullName>
        <description>When the owner is changed, the previous owner&apos;s email address is logged here. Used for workflow email notifications.</description>
        <label>Prior Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Prior_Utilization_Review__c</fullName>
        <inlineHelpText>Haystak, updated by workflow when the Last Utilization Review date is updated</inlineHelpText>
        <label>Prior Utilization Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Status__c</fullName>
        <inlineHelpText>how happy is the customer with the product you are managing for them. (Vin, use Log Solid Engagement button to update the status)</inlineHelpText>
        <label>Product Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending Setup</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Active and Happy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Risk in progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Risk in progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Risk in progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Rating</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Products_Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Products Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Products_Saved__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you Check this box, please fill our the text field to list the Products that were saved.</inlineHelpText>
        <label>Products Saved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proposal_Sent__c</fullName>
        <label>Proposal Sent</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Provision_Activation_Date__c</fullName>
        <formula>Dealer__r.vAuto_Customer_Created_Date__c</formula>
        <inlineHelpText>formula field that reads the provision activation date from the account</inlineHelpText>
        <label>Provision Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Provision_LSE_Needs__c</fullName>
        <formula>CASE(  Provision_Status__c  , 
&quot;&quot;,&quot;NO PM&quot;,
&quot;Churned&quot;, &quot;NO PM&quot;, 
&quot;Pending Needs  Data&quot;, &quot;NO PM&quot;,
&quot;Pending Needs Training&quot;,&quot;NO PM&quot;,
&quot;Pending Needs Data&quot;, &quot;NO PM&quot;,
&quot;Prospect&quot;, &quot;NO PM&quot;,
&quot;PM&quot;)</formula>
        <inlineHelpText>hidden formula field that is used to calculate the provision status for setting a visual for the status of the lse</inlineHelpText>
        <label>Provision PM Needed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provision_LSE_Priority__c</fullName>
        <formula>CASE( Provision_Status__c , 
&quot;At Risk&quot;, &quot;High&quot;, 
&quot;Pending-LAUNCH Approval&quot;, &quot;High&quot;, 
&quot;Triage&quot;, &quot;High&quot;, 
&quot;Good&quot;, &quot;Low&quot;, 
&quot;Pending Needs Training&quot;, &quot;Low&quot;, 
&quot;Pending Needs Data&quot;, &quot;Low&quot;, 
&quot;No Status&quot;)</formula>
        <inlineHelpText>formula field that calculates the LSE priority based on the status of good, at risk, pending launch aproval, etc</inlineHelpText>
        <label>Provision LSE Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provision_LSE_Status2__c</fullName>
        <formula>IF(  Provision_LSE_Needs__c  = &quot;NO PM&quot; , 
NULL, 
IF( 
OR( 
AND( Provision_LSE_Priority__c != &quot;High&quot;, LSE_Age__c &gt; 30), 
AND(Provision_LSE_Priority__c = &quot;High&quot;, LSE_Age__c &gt; 7), 
AND(ISBLANK(Provision_Status__c)), 
AND( ISBLANK( Provision_LSE__c )) 
), 
&quot;Schedule Call&quot;, 
&quot;On Schedule&quot; 
))</formula>
        <inlineHelpText>hidden formula field that intreprets the red/green images to text</inlineHelpText>
        <label>Provision LSE Status2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provision_LSE_Status__c</fullName>
        <formula>IF(  Provision_LSE_Needs__c  = &quot;NO PM&quot; , 
NULL, 
IF( 
OR( 
AND( Provision_LSE_Priority__c != &quot;High&quot;, LSE_Age__c &gt; 30), 
AND(Provision_LSE_Priority__c = &quot;High&quot;, LSE_Age__c &gt; 7), 
AND(ISBLANK(Provision_Status__c)), 
AND( ISBLANK( Provision_LSE__c )) 
), 


IMAGE(&quot;/servlet/servlet.ImageServer?id=01570000001UBKB&amp;oid=00D700000008zHZ&amp;lastMod=1425083417000&quot;, &quot;Red&quot;), 
IMAGE(&quot;/servlet/servlet.ImageServer?id=015700000021RyM&amp;oid=00D700000008zHZ&amp;lastMod=1418162444000&quot;, &quot;Green&quot;, 10,10) 
))</formula>
        <inlineHelpText>your Last Solid Engagement is out of date for the Provision Product</inlineHelpText>
        <label>Provision LSE Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provision_LSE__c</fullName>
        <inlineHelpText>Updated when the Last SE Date is updated in the Product Status List</inlineHelpText>
        <label>Provision LSE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Provision_MRR__c</fullName>
        <formula>Dealer__r.Provision_MRR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field that reads the same field from the related account</inlineHelpText>
        <label>Provision MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Provision_Status_Count__c</fullName>
        <formula>IF( Provision_LSE_Status2__c = &quot;On Schedule&quot;, True, False)</formula>
        <inlineHelpText>formula field used for reporting</inlineHelpText>
        <label>Provision Status Count</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provision_Status__c</fullName>
        <inlineHelpText>Updated when the Product Status is updated in the Product Status List</inlineHelpText>
        <label>Provision Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provision_Type__c</fullName>
        <formula>TEXT(Dealer__r.vAuto_Provision_type__c)</formula>
        <inlineHelpText>formula field that reads the provision type from the account</inlineHelpText>
        <label>Provision Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Cancellation__c</fullName>
        <description>Status changed to &quot;Closed Lost&quot; and a reason for Cancellation is needed</description>
        <inlineHelpText>Status changed to &quot;Closed Lost&quot; and a reason for Cancellation is needed</inlineHelpText>
        <label>Reason for Cancellation</label>
        <picklist>
            <picklistValues>
                <fullName>Brand compliance/OEM requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cutting expenses/billing redundancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealership closed/sold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in mgmt./mgmt. preference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did not receive functionality expected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of training/utilization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too expensive/lower competitive rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of communication and support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System performance issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forced Cancellation – Collections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Contact - Dealer Unresponsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost Pre-Launch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Cuts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consolidaton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM P.V.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Default</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotions/Offers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service/Strategy Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong POC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OOB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rebate_Acknowledgements__c</fullName>
        <label>Rebate Acknowledgements</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recap_Close__c</fullName>
        <inlineHelpText>used for sending a progress report</inlineHelpText>
        <label>Recap Close</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Recap_Summary__c</fullName>
        <inlineHelpText>used for emailing the customer a progress report</inlineHelpText>
        <label>Recap Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Receives_CO_OP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by Haystak to denote if the dealership receives Co-op funding</description>
        <label>Receives CO-OP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recent_Appraisals__c</fullName>
        <description>The number of appraisals completed within the last 7 days</description>
        <formula>Dealer__r.Recent_Appraisals__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of appraisals completed within the last 7 days</inlineHelpText>
        <label># Recent Appraisals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recent_Logins__c</fullName>
        <description>The number of logins into the vAuto web application within the last 7 days</description>
        <formula>Dealer__r.Recent_Logins__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of logins into the vAuto web application within the last 7 days</inlineHelpText>
        <label># Recent Logins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recent_Price_Changes__c</fullName>
        <description>The number of price changes made in the vAuto web application within the last 7 days</description>
        <formula>Dealer__r.Recent_Price_Changes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of price changes made in the vAuto web application within the last 7 days</inlineHelpText>
        <label># Recent Price Changes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Type_Changed_to_Cancellation__c</fullName>
        <inlineHelpText>Date field to log the Date the Record Type Changed from a Support POA to a Cancellation POA</inlineHelpText>
        <label>Record Type Changed to Cancellation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recurring_Lost__c</fullName>
        <description>Only for cancellation POAs.</description>
        <inlineHelpText>How much revenue is lost.</inlineHelpText>
        <label>Recurring Lost</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Retail_Inventory_Count__c</fullName>
        <label>Retail Used Inventory Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAM_Pilot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pilot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SA_Last_Meeting_Date__c</fullName>
        <label>SA Last Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SA_Next_Meeting_Date__c</fullName>
        <label>SA Next Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SEO_ADVANCED__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SEO – ADVANCED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMS_TEXT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS TEXT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SURVEYS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SURVEYS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sam_Harvest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Harvest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Save_Call_Made__c</fullName>
        <description>Used by Haystak. When was the customer contacted by the Dealer Retention Team?</description>
        <label>Save Call Made</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Save_Call_Notes__c</fullName>
        <description>Used by Haystak retention team to detail what was done to save this account.</description>
        <inlineHelpText>Additional information regarding Save</inlineHelpText>
        <label>Save Call Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Save_Revenue_Dollars__c</fullName>
        <label>Save Revenue Dollars</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>